--- a/tarjome2/src/index.css
+++ b/tarjome2/src/index.css
@@ -289,7 +289,7 @@ body {
 }
 
 
-.explanation-card {
+/* .explanation-card {
   transform: translateX(0);
   animation: explanation-card-change 0.79s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
@@ -303,7 +303,7 @@ body {
     transform: translateX(0);
     opacity: 1;
   }
-}
+} */
 
 
 .emty-text {
